# spectral-radius

./: .gitignore  README.md  make-arxiv-tarball.fish  pyproject.toml
code/: data_prep.py
paper/: ali-macros.sty  ali-paper.cls  appendix.tex  conclusion.tex  decompositions.tex  gss.tex  intro.tex  main.tex  refs.bib  theory.tex
paper/appendicies/: gss-questions.tex  other-demographics.tex  proofs.tex
references/: data.bib  dim-reduction.bib  political-science.bib
scratch/: spectral.py  t_distributions.R  test.py
src/: data_prep.py  decomposition.py  mca.py  scratch.r  simulation.py  variable_coding.py  variables.py
src/spectral_radius/: __init__.py  __main__.py  constants.py  plot_helpers.py  spectral.py
src/spectral_radius/congress/: __init__.py
src/spectral_radius/examples/: __init__.py  decompositions.py  helpers.py  motivation.py  norm_illustration.py
src/spectral_radius/gss/: __init__.py  data.py  demographic_variables.py  opinion_variables.py  variables.py
